Refactor code structure and remove redundant sections for improved readability and maintainability

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,16 @@
 venv/
 __pycache__/
+*.pyc
 .git/
+.github/
 .gitignore
+.hf_cache/
+.history/
 *.bat
-scripts/convert_nnscaler_checkpoint_to_transformers.py
+*.log
 temp/
-test/
+tests/
+models/
+output/
+samples/
+datasets/
