--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ onnxruntime-gpu
 
 # Web UI and utilities
 gradio
+gradio_filelister @ file:wheel/gradio_filelister-0.4.0-py3-none-any.whl
 numpy
 diffusers
 markdown
